--- a/website/index.html
+++ b/website/index.html
@@ -8,14 +8,14 @@
   <meta name="keywords" content="ephemeral mailing list, anonymous, secure, temporary communication, privacy, collaboration">
   <meta name="author" content="FMRL Ink">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="assets/logo.png" type="image/png">
+  <link rel="icon" href="assets/logo.jpeg" type="image/png">
 </head>
 <body>
   <!-- Navigation -->
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index.html"><img src="assets/logo.png" alt="FMRL Ink Logo"></a>
+        <a href="index.html"><img src="assets/logo.jpeg" alt="FMRL Ink"></a>
       </div>
       <ul class="nav-links" id="navLinks">
         <li><a href="#features">Features</a></li>
